@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $
 
+  07 Apr 2012; <alunduil@gentoo.org> upkern-9999.ebuild:
+  Changing DEPEND and RDEPEND to reflect portage defaults.
+
   04 Apr 2012; <alunduil@gentoo.org> upkern-9999.ebuild:
   Adding an initrd use flag
 
